/***********************************************************************
X3 ChangeLog

2009-01-23  Alex Schumann  <rubin@afternet.org>

	* src/mod-python.c: refactor to use class-based hook manager. Seems to
	run now.

	* src/modpython.py: refactored into classes. Seems to run now.

2008-01-12  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/opserv.c: Fix for SF bug #2491886. Added OSMSG_USER_ALREADY_THERE.

2009-01-04  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fix access change bug when using ldap but not
	ldap_oper_group_dn.

2009-01-01  Matthew Beeching  <jobe@mdbnet.co.uk>

	* languages/README.txt: Changed validate_lang.pl to validate.pl

	* languages/validate.pl: Set executable

	* languages/lang_export.sh: Set executable

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: SF feature 1476390. Added nodelete option to
	MERGE.

	* src/chanserv.help: SF feature 1476390. Added nodelete option
	to MERGE.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: SF feature 2353198. Patch from CaptKirk. Added
	the channel flag to the register command. Also removed the
	helping flag.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/hash.c: SF feature 2353183. Made X3 aware of +a.

	* src/hash.h: SF feature 2353183. Made X3 aware of +a.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/global.c: Added RCHANNELS which will send notices to all
	registered channels. Also changed CHANNELS to notice all channels
	instead of registered ones only.

	* src/global.h: Added RCHANNELS.

	* src/global.help: Added RCHANNELS target.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/global.c: Added AUTHED target.

	* src/global.h: Added AUTHED target.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/opserv.c: Store when alerts were last triggered.

2008-12-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* x3.conf.example: Added valid_channel_regex.
